--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
+    - assets/images/logo_text.png
     - assets/images/demo.png
     - assets/images/placeholder.png
     - assets/images/common/
