--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   path_provider: ^1.6.24 # 获取文件路径
 
   webview_flutter: ^1.0.7 #https://pub.flutter-io.cn/packages/webview_flutter
+  flutter_easyloading: ^2.1.2 #https://pub.flutter-io.cn/packages/flutter_easyloading
+  flutter_material_pickers: ^1.8.1 #https://pub.flutter-io.cn/packages/flutter_material_pickers
 
 dev_dependencies:
   flutter_test:
