课程搜索及筛选

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+		// fluwx问题暂时解决
+		checkReleaseBuilds false
     }
 
     defaultConfig {
