--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
+    - assets/images/logo_invite.png
     - assets/images/logo_text.png
     - assets/images/demo.png
     - assets/images/placeholder.png
