--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   webview_flutter: ^1.0.7 #https://pub.flutter-io.cn/packages/webview_flutter
   flutter_easyloading: ^2.1.2 #https://pub.flutter-io.cn/packages/flutter_easyloading
   flutter_material_pickers: ^1.8.1 #https://pub.flutter-io.cn/packages/flutter_material_pickers
+  flutter_xupdate: ^1.0.0 #https://pub.flutter-io.cn/packages/flutter_xupdate
 
 dev_dependencies:
   flutter_test:
