--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ dependencies:
   flutter_material_pickers: ^1.8.1 #https://pub.flutter-io.cn/packages/flutter_material_pickers
   flutter_xupdate: ^1.0.0 #https://pub.flutter-io.cn/packages/flutter_xupdate
   image_pickers: ^1.0.8+7 #https://pub.flutter-io.cn/packages/image_pickers
-  flutter_sound: 4.0.6 #https://pub.flutter-io.cn/packages/flutter_sound
+  flutter_audio_recorder: ^0.5.5 #https://pub.flutter-io.cn/packages/flutter_audio_recorder
+  audioplayers: ^0.17.0 #https://pub.flutter-io.cn/packages/audioplayers
 
 dev_dependencies:
   flutter_test:
