--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_audio_recorder: ^0.5.5 #https://pub.flutter-io.cn/packages/flutter_audio_recorder
   audioplayers: ^0.17.0 #https://pub.flutter-io.cn/packages/audioplayers
   package_info: '>=0.4.3+2 <2.0.0' #https://pub.flutter-io.cn/packages/package_info
+  photo_view: ^0.10.3 #https://pub.flutter-io.cn/packages/photo_view
 
 dev_dependencies:
   flutter_test:
@@ -105,6 +106,7 @@ flutter:
     - assets/images/tab/
     - assets/images/timetable/
     - assets/images/invite/
+    - assets/images/copybook/
 
 flutter_intl:
   enabled: true
