--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   audioplayers: ^0.17.0 #https://pub.flutter-io.cn/packages/audioplayers
   package_info: '>=0.4.3+2 <2.0.0' #https://pub.flutter-io.cn/packages/package_info
   photo_view: ^0.10.3 #https://pub.flutter-io.cn/packages/photo_view
+  flutter_html: ^1.1.1 #https://pub.flutter-io.cn/packages/flutter_html
 
 dev_dependencies:
   flutter_test:
